--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="user_id">User ID</string>
     <string name="security_token">Security Token</string>
     <string name="show_offers">Show Offers</string>
+
+    <string name="test_app_id">2070</string>
+    <string name="test_user_id">superman</string>
+    <string name="test_security_token">1c915e3b5d42d05136185030892fbb846c278927</string>
 </resources>
