--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="test_app_id">2070</string>
     <string name="test_user_id">superman</string>
     <string name="test_security_token">1c915e3b5d42d05136185030892fbb846c278927</string>
+
+    <string name="offer_title">Title</string>
+    <string name="offer_picture">Offer Picture</string>
 </resources>
